# MLPOnRust

./: .gitignore  Cargo.toml
data/: AirQualityUCI.csv  cross.pat  flood_dataset.csv
models/: flood.json  flood1.json  xor.json
report/: appendix.tex  main.tex
report/assignment_1/: appendix.tex  main.tex  ref.txt
report/assignment_3/: appendix.tex  main.tex  ref.bib
report/assignment_4/: appendix.tex  main.tex  ref.bib
src/: activator.rs  io.rs  layer.rs  loss.rs  main.rs  mlp.rs  model.rs  utills.rs
src/cross/: mod.rs
src/flood/: mod.rs
src/ga/: mod.rs  selection.rs
src/models/: airquality.rs  cross.rs  flood.rs  mod.rs  wdbc.rs
src/swarm/: mod.rs
src/utills/: data.rs  graph.rs  io.rs  mod.rs
src/utills/graph/: hist.rs  mod.rs
src/wdbc/: ga.rs  mod.rs  selection.rs
