[package]
name = "mlp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
plotters = "0.3.1"
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
csv = "1.1.6"
ndarray = { version = "0.15.4", features = ["serde"] }
ndarray-rand = "0.14.0"